# SAE-S51

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Doxygen_Layout.xml  README.md  makefile
ToDoList/: CMakeLists.txt  makefile
ToDoList/data/: input_default_tasks.json  load_files.txt  output_default_tasks.json  tasks.json
ToDoList/includes/: files.h  json_helper.h  sort.h  task.h  todo.h
ToDoList/src/: file.cpp  files.cpp  main.cpp
ToDoList/src/helper/: json_helper.cpp
ToDoList/src/options/: create_task.cpp  delete_task.cpp  modify_task.cpp  tasks_display.cpp
ToDoList/src/task/: task.cpp
ToDoList/src/utils/: files.cpp  sort.cpp
ToDoList/tests/: CMakeLists.txt  Makefile
ToDoList/tests/data/: tasks_test.json  test_load_files.txt
ToDoList/tests/files/: input_files_load_test.cpp  output_files_load_test.cpp
ToDoList/tests/task/: task_content_test.cpp
ToDoList/tests/todo/: delete_task_test.cpp  sort_tasks_test.cpp
ToDoList/tests/utils/: load_files_test.cpp
pipelines/: checkcpp-ci.yml  doxygen-ci.yml  executable-ci.yml  linter-ci.yml  tests-ci.yml
public/: index.html  styles.css
